# cognigraph-chunker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TODO.md  renovate.json
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  release.yml
benches/: chunking.rs
docs/: 01-why-text-chunking-matters.md  02-fixed-size-vs-delimiter-chunking.md  03-semantic-chunking-with-embeddings.md  04-markdown-aware-chunking.md  05-token-aware-merging.md  06-cognigraph-chunker-putting-it-all-together.md  07-cognition-aware-chunking.md  08-the-complete-chunking-toolkit.md  09-reranker-benchmarks-and-quality-metrics.md  10-intent-driven-chunking.md  11-topology-aware-chunking.md  12-enriched-chunking.md  13-adaptive-chunking.md
src/: lib.rs  main.rs  output.rs
src/api/: adaptive.rs  chunk.rs  cognitive.rs  enriched.rs  errors.rs  evaluate.rs  health.rs  intent.rs  merge.rs  mod.rs  semantic.rs  split.rs  topo.rs  types.rs
src/cli/: adaptive_cmd.rs  chunk_cmd.rs  cognitive_cmd.rs  enriched_cmd.rs  global_opts.rs  intent_cmd.rs  merge_opts.rs  mod.rs  semantic_cmd.rs  serve_cmd.rs  split_cmd.rs  topo_cmd.rs
src/core/: chunk.rs  merge.rs  mod.rs  savgol.rs  split.rs
src/embeddings/: cloudflare.rs  mod.rs  oauth.rs  ollama.rs  onnx.rs  openai.rs  reranker.rs
src/llm/: enrichment.rs  intents.rs  mod.rs  relations.rs  synopsis.rs  topo_agents.rs
src/semantic/: adaptive_chunk.rs  adaptive_types.rs  blocks.rs  cognitive_assemble.rs  (+17 more)
tests/: benchmark_comparison.rs  benchmark_reranker.rs  embedding_providers.rs
(+16 files in other folders)
