[workspace]
members = [".", "packages/python"]

[package]
name = "cognigraph-chunker"
version = "1.1.0"
edition = "2024"

[lib]
name = "cognigraph_chunker"
path = "src/lib.rs"

[[bin]]
name = "cognigraph-chunker"
path = "src/main.rs"

[dependencies]
# Core algorithms (from chunk library)
memchr = "2.8"
daggrs = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP client (embedding providers)
reqwest = { version = "0.13", features = ["json", "form"] }

# ONNX Runtime (local embeddings)
ort = { version = "2.0.0-rc.11", features = ["ndarray", "load-dynamic"] }

# Tokenizer (for ONNX models)
tokenizers = "0.22"

# N-dimensional arrays (used by ort)
ndarray = "0.17"

# Unicode sentence segmentation
unicode-segmentation = "1.12"

# Markdown AST parsing
pulldown-cmark = "0.13"

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "timeout", "limit"] }

# URL parsing (SSRF validation)
url = "2"

# Error handling
anyhow = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "chunking"
harness = false
